add lettering-and-legibility to media/pdf

--- a/.gitignore
+++ b/.gitignore
@@ -6,18 +6,18 @@
 *~
 
 # media
-# media/*.gif
-# media/*.jpg
-# media/*.jpeg
-# media/*.png
-# media/*.pdf
-# media/*.svg
-# media/*.tif
-# media/*.tiff
-# media/*.mp4
-# media/*.mov
-# media/*.webm
-# media/*.webp
+media/*.gif
+media/*.jpg
+media/*.jpeg
+media/*.png
+media/*.pdf
+media/*.svg
+media/*.tif
+media/*.tiff
+media/*.mp4
+media/*.mov
+media/*.webm
+media/*.webp
 
 # macos
 .DS_Store
